# lib-py

./: LICENSE  README.md  pyproject.toml
example/: run.py  steps.py
src/tspec/: core.py  createsteps.py  runner.py  tspec1.md  tspec2.md
tests/: test_core.py
